--- a/src/App.css
+++ b/src/App.css
@@ -8,6 +8,17 @@
   flex-wrap: nowrap;
   margin: 4rem auto;
 }
+
+.container2 {
+  display: flex;
+  flex-direction: row;
+  align-content: center;
+  justify-content: center;
+  align-items: center;
+  margin: 4rem auto;
+  width: 80%;
+}
+
 #title {
   color: darkred;
 }
@@ -18,4 +29,34 @@ img {
 
 #movie {
   width: 20%;
+}
+
+.yellow {
+  background-color: darkgoldenrod;
+}
+
+.green {
+  background-color: green;
+}
+
+.toggle-btn {
+  display: flex;
+  flex-direction: row;
+  align-content: center;
+  justify-content: space-evenly;
+  align-items: center;
+  width: 40%;
+  margin: 4rem auto;
+  background-color: #7e7e58;
+  border: 3rem solid #2d342d;
+  border-radius: 2rem;
+}
+
+.btn {
+  width: 20%;
+  height: 4rem;
+  font-size: 45px;
+  border-radius: 1rem;
+  border: none;
+  box-shadow: 7px 1px #2d342d;
 }
